--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "core-js": "^3.3.2",
     "normalize-scss": "^7.0.1",
     "register-service-worker": "^1.6.2",
+    "remove-focus-outline": "^1.2.1",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3",
     "vuex": "^3.0.1"
