--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "build": "babel dev-server --out-dir prod-server && vue-cli-service build",
+    "lint": "vue-cli-service lint",
+    "dev": "concurrently \"babel dev-server --out-dir prod-server --watch\" \"nodemon prod-server/index.js\" \"npm run serve\" "
   },
   "dependencies": {
     "core-js": "^3.4.7",
@@ -23,11 +24,14 @@
     "@vue/cli-plugin-router": "^4.1.1",
     "@vue/cli-plugin-vuex": "^4.1.1",
     "@vue/cli-service": "^4.1.1",
+    "babel-cli": "^6.26.0",
     "babel-eslint": "^10.0.3",
+    "babel-preset-env": "^1.7.0",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
     "sass": "^1.19.0",
     "sass-loader": "^8.0.0",
-    "vue-template-compiler": "^2.6.10"
+    "vue-template-compiler": "^2.6.10",
+    "braces": "^2.3.2"
   }
 }
