--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.19.0",
     "core-js": "^3.4.7",
+    "jsonwebtoken": "^8.5.1",
     "moment": "^2.24.0",
     "mongoose": "^5.8.0",
     "normalize-scss": "^7.0.1",
