--- a/package.json
+++ b/package.json
@@ -15,14 +15,17 @@
     "body-parser": "^1.19.0",
     "core-js": "^3.4.7",
     "jsonwebtoken": "^8.5.1",
+    "luxon": "^1.21.3",
     "moment": "^2.24.0",
     "mongoose": "^5.8.0",
     "normalize-scss": "^7.0.1",
     "register-service-worker": "^1.6.2",
     "remove-focus-outline": "^1.2.1",
     "vue": "^2.6.10",
+    "vue-datetime": "^1.0.0-beta.11",
     "vue-router": "^3.1.3",
-    "vuex": "^3.0.1"
+    "vuex": "^3.0.1",
+    "weekstart": "^1.0.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.1.1",
